test/expressions/new-expr/new-on-prim.chpl
proc main() {
  var x : int = new int(64);

  writeln(x);
}
